carousel fix + overlay carousel fix (TODO css styling bug right side small white space)

--- a/Webclient/webClient.scss
+++ b/Webclient/webClient.scss
@@ -48,7 +48,6 @@ html {
 
 #contentOverlay .myCarousel .carousel {
 	position: absolute;
-	transform: translate(0, -50%);
 }
 
 #overlay {
